--- a/package.json
+++ b/package.json
@@ -6,19 +6,8 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.17.1",
-    "cookie-parser": "~1.4.3",
     "cors": "^2.8.3",
-    "debug": "~2.6.3",
     "express": "~4.15.2",
-    "hjs": "~0.0.6",
-    "less-middleware": "~2.2.0",
-    "morgan": "~1.8.1",
-    "python-shell": "^0.4.0",
-    "serve-favicon": "~2.4.2"
-  },
-  "devDependencies": {
-    "flightplan": "^0.6.17",
-    "fly": "^2.0.6"
+    "python-shell": "^0.4.0"
   }
 }
