--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "cors": "^2.8.3",
     "express": "~4.15.2",
+    "helmet": "^3.8.0",
+    "https": "^1.0.0",
     "python-shell": "^0.4.0"
   }
 }
